[package]
name = "test-certs"
version = "0.1.0"
edition = "2021"
default-run = "test-certs"

[features]
fixtures = []

[dependencies]
thiserror = "2"
rcgen = "0.13"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
serde_with = "3.11"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap-stdin = "0.5"

[dev-dependencies]
testdir = "0.9"
rustls = "0.23"

[lints]
workspace = true
